# ps4-esp32-driver

./: .gitignore  LICENSE  README.md  sdkconfig
main/: CMakeLists.txt  app_main.c  esp_hid_gap.c
